--- a/Backend/.env
+++ b/Backend/.env
@@ -2,7 +2,7 @@
 PORT=4000
 
 # MongoDB
-MONGO_URI=mongodb://localhost:27017/employeeManagementWithRedis
+MONGO_URI=mongodb+srv://varunca:Varunca06@varun.zt1jo4e.mongodb.net/?retryWrites=true&w=majority&appName=varun
 
 # Authentication
 JWT_SECRET=your_jwt_secret
