--- a/Backend/.env
+++ b/Backend/.env
@@ -3,14 +3,12 @@ PORT=4000
 
 # MongoDB
 MONGO_URI=mongodb+srv://varunca:Varunca06@varun.zt1jo4e.mongodb.net/?retryWrites=true&w=majority&appName=varun
-
 # Authentication
 JWT_SECRET=your_jwt_secret
 TOKEN_EXPIRY=86400 # in seconds (1 day)
 
 # Redis
-REDIS_URL=redis://localhost:6379
-
+REDIS_URL=redis://default:cHUyp34uLsik8FLV5raghITTjKcCxJZl@redis-13740.c276.us-east-1-2.ec2.redns.redis-cloud.com:13740
 # Rate Limiting
 RATE_LIMIT_WINDOW=60   # 60 seconds
 RATE_LIMIT_MAX=10      # Max 10 requests per IP per window
